apps/dssp-spring-package-git-lab-08-oct/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-spring-package-git-lab-08-oct
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-spring-package-git-lab-08-oct
spec:
  selector:
    app: dssp-spring-package-git-lab-08-oct
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
