apps/dssp-spring-package-git-lab-08-oct/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-spring-package-git-lab-08-oct
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-spring-package-git-lab-08-oct
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dssp-spring-package-git-lab-08-oct-dev
            pathType: Prefix
            backend:
              service:
                name: dssp-spring-package-git-lab-08-oct
                port:
                  number: 80
